--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -11,7 +11,7 @@
 		\label{logo ULCO}
 	\end{figure}
 	
-	A la découverte du C/C++}
+	A la découverte du C++}
 	
 \author{PRUVOST Benjamin \thanks{benjamin.pruvost@etu.univ-littoral.fr} \and REPORT Tanguy \thanks{Tanguy.Report@etu.univ-littoral.fr}}
 \date{}
@@ -23,4 +23,10 @@
 	\tableofcontents
 	\include{Chapitres/intro}
 	\include{Chapitres/chapitre1}
+	\include{Chapitres/chapitre2}
+	\include{Chapitres/chapitre3}
+	\include{Chapitres/chapitre4}
+	\include{Chapitres/chapitre5}
+	\include{Chapitres/chapitre6}
+	
 \end{document}
