--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -3,15 +3,16 @@
 \usepackage{lmodern}
 \usepackage{graphicx}
 \usepackage{babel}
+\usepackage{listings}
 
 
 \title{\begin{figure}[h]
 		\centering
-		\includegraphics[width=0.5\linewidth]{ulco}
+		\includegraphics[width=0.5\linewidth]{Images/ulco}
 		\label{logo ULCO}
 	\end{figure}
 	
-	A la découverte du C++}
+	À la découverte du C++}
 	
 \author{PRUVOST Benjamin \thanks{benjamin.pruvost@etu.univ-littoral.fr} \and REPORT Tanguy \thanks{Tanguy.Report@etu.univ-littoral.fr}}
 \date{}
