Chapitre 1 fait + ajout de package dans fichier original +...

--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -1,7 +1,12 @@
 \documentclass[french]{report}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[a4paper]{geometry}
 \usepackage{lmodern}
 \usepackage{graphicx}
+\usepackage{xcolor}
+\usepackage{mathtools}
+\usepackage{amssymb}
 \usepackage{babel}
 \usepackage{listings}
 \usepackage[hidelinks]{hyperref}
