--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -8,6 +8,7 @@
 \usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{babel}
+\usepackage[locale=FR]{siunitx}
 \usepackage{listings}
 \usepackage[hidelinks]{hyperref}
 
