--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -14,6 +14,8 @@
 \usepackage{listings}
 \usepackage[hidelinks]{hyperref}
 
+\NewDocumentCommand{\ex}{m}{\textsf{\textbf{Exemple #1}}}
+
 
 \title{\includegraphics[width=0.5\linewidth]{Images/ulco}
 		
