--- a/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
+++ b/〈Pruvost〉-〈Benjamin〉-〈Report〉-〈Tanguy〉/rapport.tex
@@ -13,8 +13,10 @@
 \usepackage[locale=FR]{siunitx}
 \usepackage{listings}
 \usepackage[hidelinks]{hyperref}
+\usepackage[dvipsnames]{xcolor}
 
 \NewDocumentCommand{\ex}{m}{\textsf{\textbf{Exemple #1}}}
+\NewDocumentCommand{\cpp}{}{\emph{\color{JungleGreen}C++ }}
 
 
 \title{\includegraphics[width=0.5\linewidth]{Images/ulco}
